# KAKARAKE

./: .gitignore  GAA problem KaKaRaKe 1.html  GAA problem KaKaRaKe 2.html  GAA problem.html  KaKaRaKe.html  README.md  c432-110.csv  c432-141.csv  c432-88.csv  data.7z  ideas.txt  pyproject.toml  u9-99.csv
Notebooks/: DLAP.ipynb  DM2 (complex).html  DM2 (simple).html  SCORE Bands.ipynb  TSP.ipynb  Untitled1.ipynb  Untitled2.ipynb  corrected DM2 (complex).html  corrected DM2 (simple).html  dim-reduction.ipynb  parcoords test.ipynb
Outputs/: Obj_arch_nds_1_plot.html  c333-1021_plot.html  c432-110_plot.html  c432-141_plot.html  c432-710_plot.html  c432-88_plot.html  c432-98_plot.html  clustered_ordered.html  clustered_ordered_variable_axes.html  simple_par_coord.html  solutions_clustered.html  u000-1279_plot.html  u9-99_plot.html
Scripts/: SCORE Bands.py  create_plots_from_data.py
app/: index.py
data/: Cex0.ralph.csv  Cex1.csv  Cex1.ralph.csv  Cex2.ralph.csv  DM2sols_update.csv  DTLZ1.csv  DTLZ1_5.csv  DTLZ2.csv  DTLZ2_5.csv  DTLZ5_5.csv  DTLZ7.csv  DTLZ7_4D_true_front.csv  DTLZ7_5.csv  DTLZ7_6d_true_front.csv  MetallurgicalProblem3d.csv  MetallurgicalProblem4d.csv  Obj_arch_nds_1.csv  WFG1.csv  WFG1_5.csv  WFG3.csv  WFG3_5.csv  WFG4.csv  WFG4_5.csv  c333-1021.84.csv  c432-110.csv  c432-141.csv  c432-710.86.ralph.csv  c432-88.ralph.csv  c432-98.64.csv  modified data.csv  u000-1279.87.csv  u9-99.csv
images/: Cex0.ralph.html  Cex1.ralph.html  Cex1new.ralph.html  Cex2.ralph.html  DTLZ1.html  DTLZ1_5.html  DTLZ2.html  DTLZ2_5.html  DTLZ5.html  DTLZ5_5.html  DTLZ7.html  DTLZ7_3d_true_front.html  DTLZ7_4D_true_front.html  DTLZ7_5.html  DTLZ7_6d_true_front.html  MetallurgicalProblem3d.html  MetallurgicalProblem4d.html  Obj_arch_nds_1.html  WFG1.html  WFG1_5.html  WFG3.html  WFG3_5.html  WFG4.html  WFG4_5.html  c333-1021.84.ralph.html  c432-110.ralph.html  c432-141.ralph.html  c432-710.86.ralph.html  c432-88.ralph.html  c432-98.64.ralph.html  modified data.html  u9-99.ralph.html
kakarake/: SCORE.py  clustering.py  parallel_coordinates_bands.py  parallel_coordinates_bands_v2.py  test.py  (+1 more)
(+4 files in other folders)
