[tool.poetry]
name = "kakarake"
version = "0.1.0"
description = ""
authors = ["Bhupinder Saini <bhupinder.saini2.71@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pylint = "^2.5.3"
dash = "^1.13.4"
numpy = "^1.19.0"
pandas = "^1.0.5"
ipython = "^7.16.1"
ipykernel = "^5.3.2"
black = "^19.10b0"
matplotlib = "^3.2.2"
scipy = "^1.5.1"
scikit-learn = "^0.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
