[tool.poetry]
name = "kakarake"
version = "0.1.0"
description = ""
authors = ["Bhupinder Saini <bhupinder.saini2.71@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.7.0, <3.10"
dash = "^1.13.4"
ipython = "^7.16.1"
ipykernel = "^5.3.2"
black = "^19.10b0"
matplotlib = "^3.2.2"
nbformat = "^5.0.8"
tsp_solver2 = "^0.4.1"
dash-bootstrap-components = "^0.11.1"
desdeo = "^1.1.2"
orca = "^1.6"
psutil = "^5.8.0"
requests = "^2.26.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
ruff = "^0.0.236"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "C", "I", "W", "N", "D", "YTT", "ANN", "C4", "EM", "T20", "SIM", "PD", "PL"]

line-length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
